# france-grid-stress-prediction

./:  requirements-api.txt  .cache.sqlite  .cache_weather.sqlite  .env.example  .gitignore  Dockerfile  Makefile  README.md  backtest_jplus12023.py  meteo_globale.py  meteo_globale_hist.py  meteo_idf.ipynb  pyproject.toml  requirements.txt  train_xgboost.py  visualisation_conso.ipynb
api/: app.py  feature_builder.py  model.py  rte_provider.py  weather_provider.py
configs/: data.yaml  features.yaml  model_generation.yaml  model_load.yaml
data/interim/: backtest_jplus1_2023_predictions_daily.csv  consommation_2016_long.csv  consommation_2017_long.csv  consommation_2018_long.csv  consommation_2020_long.csv  consommation_2023_long.csv  consommation_2024_long.csv
data/processed/: backtest_jplus1_2023_predictions.csv  consommation_2010_long.csv  consommation_2011_long.csv  consommation_2012_long.csv  consommation_2013_long.csv  consommation_2015_long.csv  consommation_2022_long.csv  consommation_clean.parquet
models/: metadata.json  xgb_model.joblib
notebooks/: 00_notebook_fusionne_avec_sommaire_lie.ipynb  00_notebook_fusionne_avec_sommaire_lie.md  00_notebook_reorganise.ipynb  01_exploration.ipynb  01_exploration_clean.ipynb  02_cleaning.ipynb  02_cleaning_clean.ipynb  03_feature_engineering.ipynb  03_feature_engineeringPROPHET.ipynb  04_modeling.ipynb  05_analysis.ipynb  EDA.ipynb  EDA.md  nettoyagerapport  prophet.ipynb  prophet_runner.ipynb
scripts/: build_prophet_filled.py  meteo_globale.py  meteo_globale_hist.py  meteo_paris.py  prophet.ipynb
(+117 files in other folders)
